Got rid of SearchItem. It's generic `S` now